# Xu-ly-anh

./: .gitignore  CMakeLists.txt  README.md  Stitcher.py  app.py  custom_stitcher.py  imageStiching.py  main.cpp  org_stitcher.py  test.py
web/static/: script.js  styles.css
web/templates/: index.html
